HPS-52 fix: fix tests